Fixed z-index of nav dropdowns so text does not overlap

--- a/mosley_website/Client/Pages/EnsemblePage.razor.css
+++ b/mosley_website/Client/Pages/EnsemblePage.razor.css
@@ -10,7 +10,7 @@
 
 .ensemble-page-picture {
     aspect-ratio: 49 / 32;
-    max-width: clamp(300px, 35vw, 700px)
+    max-width: clamp(300px, 35vw, 700px);
 }
 .ensemble-page-article-content {
     align-self: center;
